<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="82dp">

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfect_coil_1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/perfect_coil_1" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prefect_coil_2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/perfect_coil_2" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfect_coil_3"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/perfect_coil_3" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfect_coil_4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/perfect_coil_4" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfect_coil_5"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/perfect_coil_5" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfect_coil_6"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfect_coil_7"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/perfect_coil_6" />
    </LinearLayout>
</ScrollView>